# aws-lambda-boilerplate

./: .gitignore  README.md
.agents/skills/configure-aws-lambda/: SKILL.md
aws-lambda-golang-docker-starter/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum
aws-lambda-golang-docker-starter/cmd/: main.go
aws-lambda-golang-docker-starter/internal/app/: handler.go  handler_test.go  http.go
aws-lambda-golang-docker-starter/internal/cli/: root.go  root_test.go
aws-lambda-golang-docker-starter/internal/events/: events.go  events_test.go
aws-lambda-golang-docker-starter/test-cases/: sqs-event.json
aws-lambda-python-docker-starter/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
aws-lambda-python-docker-starter/app/: __init__.py  cli.py  flask_app.py  handler.py
aws-lambda-python-docker-starter/app/entrypoints/: __init__.py  lambda_handler.py  local.py  test_event.py
aws-lambda-python-docker-starter/app/events/: __init__.py  events.py
aws-lambda-python-docker-starter/test-cases/: http-v1-event.json  http-v2-event.json
aws-lambda-python-docker-starter/tests/: test_app.py  test_events.py  test_handler.py
aws-lambda-typescript-docker-starter/: .dockerignore  .gitignore  .prettierrc.js  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
aws-lambda-typescript-docker-starter/src/: app.ts  lambda.test.ts  lambda.ts  local.ts  registry.ts  test-utils.ts
aws-lambda-typescript-docker-starter/test-cases/: http-v1-event.json  http-v2-event.json
definition/: aws-lambda.schema.json
(+25 files in other folders)
