[project]
name = "aws-lambda-python-docker-starter"
version = "0.1.0"
description = "Python + Flask AWS Lambda starter for local development and Docker deployment."
requires-python = ">=3.9"
dependencies = [
  "flask>=3.1.0,<4.0.0",
  "awslambdaric>=3.1.1,<4.0.0",
  "aws-lambda-typing>=2.20.0,<3.0.0",
  "typing-extensions>=4.12.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
